[tool.poetry]
name = "dash-project"
version = "0.1.0"
description = ""
authors = ["BalbinaRaquel <balbina.rakell@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
dash = "^2.18.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
